Atualizando a estilização da página Web para melhor visualização do usuário

--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,20 @@
+* {
+    text-decoration: none;
+    text-transform: capitalize;
+    transition: 0.2s linear;
+    font-family: "Cal Sans", sans-serif;
+    box-sizing: border-box;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background: url('img/fundo.jpeg');
+    background-size: cover;
+    background-position: center;
     margin: 0;
     padding: 20px;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     min-height: 100vh;
 }
 
@@ -22,13 +31,11 @@ body {
 .h1 {
     color: #333;
     margin-bottom: 20px;
-    font-family: Arial, sans-serif;
 }
 
 .p {
     color: #666;
     margin-bottom: 20px;
-    font-family: Arial, sans-serif;
 }
 
 form {
@@ -60,6 +67,8 @@ button {
 
 button:hover {
     background-color: #0056b3;
+    letter-spacing: 0.01rem;
+    transition: 0.2s;
 }
 
 .results {
@@ -90,4 +99,8 @@ button:hover {
 
 .results error p {
     font-weight: bold;
+}
+
+span {
+    color: #007bff
 }
