--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Scraper Funcional</title>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"
 </head>
 <body>
 
     <div class="container">
-        <h1>Web Scraper Funcional</h1>
+        <h1>Web <span>Scraper</span> Funcional</h1>
         <p>Insira uma URL (ex: http://quotes.toscrape.com/) para realizar a extração de dados e obter as citações.</p>
 
         <form method="POST" action = "/">
